--- a/htmls/progdetails_page2.html
+++ b/htmls/progdetails_page2.html
@@ -32,6 +32,7 @@
     <h1>%PROGRAMID_LABEL%</h1> <p>%PROGRAMID%</p>
     <h1>%MYTHTV_STATUS_LABEL%</h1> <p>%MYTHTV_STATUS%</p>
     <h1>%RECORDING_RULE_LABEL%</h1> <p>%RECORDING_RULE%</p>
+    <h1>%RECORDING_INPUT_LABEL%</h1> <p>%RECORDING_INPUT%</p>
     <h1>%LAST_RECORDED_LABEL%</h1> <p>%LAST_RECORDED%</p>
     <h1>%NEXT_RECORDING_LABEL%</h1> <p>%NEXT_RECORDING%</p>
     <h1>%AVERAGE_TIME_SHIFT_LABEL%</h1> <p>%AVERAGE_TIME_SHIFT%</p>
